site-image/service.yml
kind: Service
apiVersion: v1
metadata:
  name: site-app-service
  namespace: nginx-ns
spec:
  selector:
    app: site-app
  ports:
  - port: 80
    targetPort: 8080
