site-image/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: myingress
  namespace: nginx-ns
  labels:
    name: myingress
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: /gameapp
        backend:
          service:
            name: first-app
            port: 
              number: 80
      - pathType: Prefix
        path: /site
        backend:
          service:
            name: site-app-service
            port: 
              number: 8080
